--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
+    <h2 id ='message'></h2>
     <section class = "board"><!--
-   --><div id = '1'></div><!--
-   --><div id = '2'></div><!--
-   --><div id = '3'></div><!--
-   --><div id = '4'></div><!--
-   --><div id = '5'></div><!--
-   --><div id = '6'></div><!--
-   --><div id = '7'></div><!--
-   --><div id = '8'></div><!--
-   --><div id = '9'></div><!--
+   --><div class='sq' id = 'b1'></div><!--
+   --><div class='sq' id = 'b2'></div><!--
+   --><div class='sq' id = 'b3'></div><!--
+   --><div class='sq' id = 'b4'></div><!--
+   --><div class='sq' id = 'b5'></div><!--
+   --><div class='sq' id = 'b6'></div><!--
+   --><div class='sq' id = 'b7'></div><!--
+   --><div class='sq' id = 'b8'></div><!--
+   --><div class='sq' id = 'b9'></div><!--
  --></section>
 
- <section class="endGame" id = 'winner-message'></section>
+
 
     <script src="main.js" charset="utf-8"></script>
   </body>
