--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
   </head>
   <body>
-    <h1>Tic Tac Toe</h1>
-    <h2 id ='message'></h2>
+    <h1 class ='animated tada' >Tic Tac Toe</h1>
+    <h2  id ='message'></h2>
     <section class = "board"><!--
    --><div class='sq' id = 'b1'></div><!--
    --><div class='sq' id = 'b2'></div><!--
